crates/icydb-core/tests/ui/traits/borrowed_string_is_not_runtime_decodable.rs
use icydb_core::value::RuntimeValueDecode;

fn assert_runtime_decode<T: RuntimeValueDecode>() {}

fn main() {
    assert_runtime_decode::<&'static str>();
}
